import { render, screen, fireEvent } from '@testing-library/react';
import userEvent from '@testing-library/user-event';
import { describe, expect, it, vi } from 'vitest';
import { Card } from './card';

describe('Card', () => {
  const renderBasicCard = (props = {}) => {
    return render(
      <Card data-testid="card" {...props}>
        Test content
      </Card>
    );
  };

  describe('Snapshots', () => {
    it('matches default snapshot', () => {
      const { container } = renderBasicCard();
      expect(container.firstChild).toMatchSnapshot();
    });

    it('matches loading state snapshot', () => {
      const { container } = renderBasicCard({ loading: true });
      expect(container.firstChild).toMatchSnapshot();
    });
    it('matches disabled state snapshot', () => {
      const { container } = renderBasicCard({ disabled: true });
      expect(container.firstChild).toMatchSnapshot();
    });
  });

  describe('Basic Functionality', () => {
    it('renders correctly', () => {
      renderBasicCard();
      expect(screen.getByTestId('card')).toBeInTheDocument();
    });

  });




  describe('States', () => {
    it('handles loading state correctly', () => {
      renderBasicCard({ loading: true });
      const element = screen.getByTestId('card');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for loading state
    });
    it('handles disabled state correctly', () => {
      renderBasicCard({ disabled: true });
      const element = screen.getByTestId('card');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for disabled state
    });
  });




  describe('Props', () => {
    it('handles loading prop correctly', () => {
      renderBasicCard({ loading: true });
      const element = screen.getByTestId('card');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for loading prop
    });
    it('handles disabled prop correctly', () => {
      renderBasicCard({ disabled: true });
      const element = screen.getByTestId('card');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for disabled prop
    });
  });

  describe('Accessibility', () => {
    it.skip('can be focused - SKIPPED: Non-focusable element', () => {
      // This element cannot receive focus (div/span/table)
      // Focus tests disabled for accessibility accuracy
      expect(true).toBe(true);
    });

    it('has proper ARIA attributes', () => {
      renderBasicCard();
      const element = screen.getByTestId('card');
      expect(element).toBeInTheDocument();
      // TODO: Add specific ARIA attribute tests based on component type
    });

    it.skip('supports keyboard navigation - SKIPPED: Non-focusable element', () => {
      // This element cannot receive focus (div/span/table)
      // Focus tests disabled for accessibility accuracy
      expect(true).toBe(true);
    });

    it('announces changes to screen readers', () => {
      renderBasicCard();
      // TODO: Add screen reader announcement tests
      expect(screen.getByTestId('card')).toBeInTheDocument();
    });

    it('respects reduced motion preferences', () => {
      renderBasicCard();
      // TODO: Add reduced motion tests
      expect(screen.getByTestId('card')).toBeInTheDocument();
    });
  });

  describe('Custom Styling and Props', () => {
    it('accepts custom className', () => {
      renderBasicCard({ className: 'custom-class' });
      const element = screen.getByTestId('card');
      expect(element).toHaveClass('custom-class');
    });

    it('forwards refs correctly', () => {
      const ref = vi.fn();
      renderBasicCard({ ref });
      // Ref forwarding test - environment dependent
    // expect(ref).toHaveBeenCalledWith(expect.any(HTMLElement));
    });

    it('spreads additional props', () => {
      renderBasicCard({ 'data-custom': 'test-value' });
      const element = screen.getByTestId('card');
      expect(element).toHaveAttribute('data-custom', 'test-value');
    });
  });

  describe('Edge Cases', () => {
    it('handles undefined props gracefully', () => {
      renderBasicCard({ children: undefined });
      expect(screen.getByTestId('card')).toBeInTheDocument();
    });

    it('handles null props gracefully', () => {
      renderBasicCard({ children: null });
      expect(screen.getByTestId('card')).toBeInTheDocument();
    });

    it('handles empty string props', () => {
      renderBasicCard({ className: '' });
      expect(screen.getByTestId('card')).toBeInTheDocument();
    });

    it('handles rapid prop changes', () => {
      const { rerender } = renderBasicCard({ className: 'class1' });
      rerender(<Card data-testid="card" className="class2" />);
      const element = screen.getByTestId('card');
      expect(element).toHaveClass('class2');
    });

    it('handles complex nested content', () => {
      render(
        <Card data-testid="card">
          <div>
            <span>Nested content</span>
            <p>More content</p>
          </div>
        </Card>
      );
      expect(screen.getByTestId('card')).toBeInTheDocument();
    });

    it('maintains functionality with many children', () => {
      render(
        <Card data-testid="card">
          {Array.from({ length: 100 }, (_, i) => (
            <div key={i}>Item {i}</div>
          ))}
        </Card>
      );
      expect(screen.getByTestId('card')).toBeInTheDocument();
    });

    it('handles component unmounting cleanly', () => {
      const { unmount } = renderBasicCard();
      expect(() => unmount()).not.toThrow();
    });

    it('preserves functionality after remounting', () => {
      const { unmount } = renderBasicCard();
      unmount();
      renderBasicCard();
      expect(screen.getByTestId('card')).toBeInTheDocument();
    });
  });
});

// TODO: Review and customize generated tests based on component-specific requirements
// TODO: Add component-specific interaction tests
// TODO: Verify all variant combinations work correctly
// TODO: Test integration with form libraries if applicable
// TODO: Add performance tests for complex components
