// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > Snapshots > matches default snapshot 1`] = `
<div
  class="rounded-lg border text-card-foreground shadow-sm transition-colors border-border bg-card"
  data-testid="card"
>
  Test content
</div>
`;

exports[`Card > Snapshots > matches disabled state snapshot 1`] = `
<div
  class="rounded-lg border text-card-foreground shadow-sm transition-colors border-border bg-card opacity-50 pointer-events-none"
  data-testid="card"
>
  Test content
</div>
`;

exports[`Card > Snapshots > matches loading state snapshot 1`] = `
<div
  class="rounded-lg border text-card-foreground shadow-sm transition-colors border-border bg-card relative"
  data-testid="card"
>
  <div
    class="absolute inset-0 flex items-center justify-center bg-background/80 rounded-lg"
  >
    <div
      class="animate-spin h-6 w-6 border-2 border-primary border-t-transparent rounded-full"
    />
  </div>
  Test content
</div>
`;
